♿️ Fix focus ring not showing on input fields

--- a/ui/foundation/components/form/index.scss
+++ b/ui/foundation/components/form/index.scss
@@ -46,7 +46,6 @@
 	max-height: var(--max-height);
 	min-height: var(--max-height);
 	position: relative;
-	overflow: hidden;
 }
 
 .fdn-input .fdn-input-prefix,
